minor updates and corrections of links

--- a/decree-a-thing.html
+++ b/decree-a-thing.html
@@ -2,7 +2,7 @@
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Annual Oasis Singles Valentine&rsquo;s</title>
+<title>Decree A Thing</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -47,7 +47,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           </ul>
 		  <div style="background-image:url(images/gui_login_divide_bg.jpg); height:6px; background-repeat:repeat-x; "></div> 
         </div> 
-        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->EditRegion5<!-- InstanceEndEditable --></div> 
+        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->&nbsp;<!-- InstanceEndEditable --></div> 
       </div></td> 
     <td width="653" background="images/teststrip.jpg" bgcolor="#DDD6C4" style="vertical-align:top;"><div class="container"> 
         <div id="loginspace"> </div> 
@@ -55,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">Regional Events </p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -73,26 +73,19 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         <div id="gui_borderleft"> 
           <div id="gui_borderright"> 
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
-               <!--SECTION LEFT BEGIN-->
+        <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic">
-              <div class="photocredits"></div>
-            </div>
-            
-            <h4 id="articleTitle">Oasis Singles</h4>
-            <h4 class="qa">Annual Oasis Singles Valentine's</h4>
-            <div id="authorname">
-              <p>by Cindy Galdal-Ruperto</div>
-            
-              <p>The  biggest singles event of the year is our <strong>Annual Oasis Singles Valentine&rsquo;S Event</strong> coming up on<strong> Saturday, February 7th </strong>at <strong>6 pm</strong>. Our Valentine&rsquo;s events always  draw our lar&shy;gest crowds! Hundreds of singles of all ages from diffe&shy;rent  denominations and from all walks of life from throughout the tri-state area  attend each year. We host these Christ-centered events at <strong>First Evangelical Free Church </strong>located  at 6501 Sixth Avenue in Bay Ridge, Brooklyn. We suggest that you arrive  by 5:30pm because tic- kets cannot be reserved ahead of time. </p>
-              <p>This year we will be addressing some of  the emotions singles feel as they wait for  a mate. Sometimes singles begin to feel that  God has forgotten them. They have watched their friends get married and  wonder if it will ever be their turn. I felt that way, too, until I got married. The enemy works to discourage us with  lies that we are alone or lost in this world. But  the Bible tells us clearly that God has counted every hair on our head and  ordained our steps since before He laid the foundation of the world. How  important it is to stay in the Word each day so  we can be reminded of His great love for us. Our Valentine&rsquo;s event will  do just that! </p>
-              <p>We will begin our celebration of God&rsquo;s  love at 6 pm with a catered meal. You can come by yourself or with others. Many singles come alone and travel a  long distance to do so. Church singles groups are  welcome. The program begins at 7pm. </p>
-              <p>This year we have changed the format of  our program by making it interactive. Guest speakers <strong>Joe</strong> &amp; <strong>Cherri</strong> <strong>Freeman</strong> will share their testimony of  how they met later in life with a funny and touching message entitled &ldquo;Love  Broke Through.&rdquo; You&rsquo;ll laugh and you&rsquo;ll learn that God really does have a plan  for each of our lives. A time of Q and A will follow. God has been do&shy;ing great  things in our events during these interactive times. Singles enjoy asking  questions that are near to their hearts and it is great to discuss topics that are relevant and common. It truly  feels like a taste of the early church when the Believers got together to share  their lives with each and had Christ in the center. </p>
-              <p>Our guest speakers, the Freeman&rsquo;s are  missionaries for Grace Fellowship International and travel the world sharing  God&rsquo;s truth. Musical guest Aaron Louie is worship leader at Grace Christian  Church in NJ. There will be a wonderful time of worship.</p>
-              <p>We have a special way of helping you do that! OASIS is a very  friendly place. If you are tired of the  singles scene, OASIS will be a refreshing change for you. There is no  excuse to stay home. Come on out and make some new friends! This Valentine&rsquo;s  you&rsquo;ve got a date with hundreds of Christian singles who are living for God and  enjoying their inseparable union in Him. His eternal, unshakeable Love is worth  celebrating!</p>
-              <p>Admission is $15 at the door. Tickets  cannot be reserved a head of time. Attire is casual, but neat. If you would like to volunteer to help out the night before  the event as we set up and decorate please arrive at the church at 7pm  on Feb. 6th. We are done by 9:30pm. <strong><em></em></strong></p>
-              <p class="articlecredits">If you have questions call 718-836-0029 or e-mail Cindy@CompleteinChrist. com. For directions visit: www.completeinChristcom. Free parking available in church parking lot or take the R train to 69th St. &amp; 4th Ave., Bay Ridge Avenue. </p>
-</div>
+    <div><img src="images/decreeathingpicture.jpg" alt="Clock Image " name="articlepic" width="200" height="242" class="" id="articlepic"></div>
+            <h4 id="articleTitle">Decree A Thing</h4>
+              <div id="authorname">Dr. Peter Bonadie
+                <!--SECTION LEFT END-->
+ </div>
+            <p><b>Kingdom Life Mi­ni­s­tries Interna­tional</b> presents <b>IPS (Inter­national Prayer Summit) 48 Hours of Prayer-De­cree A Thing</b>, January 16th-18th, 2015 with <b>Apostle Robert Kasaro, Rev. David Chali­yumba, Apostle Stephen Andrews, Pastor Randy Thurman and Amante La­cey</b>.</p> 
+            <p><b>Host Pastor Dr. Peter Bonadie</b>. Exercising the Authority of the believer over the material World. Venue: 770 Park Place, Brooklyn, New York 11216.</p>
+            <p>For additional information please call us at (718) 363-7344 or visit us at www.klministries.org.</p>
+
+              </div>
+          <div id="body_adspace"></div>
           <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
