--- a/events.html
+++ b/events.html
@@ -118,8 +118,59 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   <div class="photocredits2"> </div>
                   <img style="border:1px #666 solid" src="authors/charlottehall.jpg" height="75" alt="Charlotte Hall" /><br>
     </div>
-                <h2>Silent No More!-Part 2</h2>
-                <p>Hello  Beloved! <strong>JESUS IS THE REASON FOR THIS  SEASON</strong>, and every season. Christmas is  a glorious season of celebrating the birth of our Lord and Savior Jesus Christ!  Yet even in the midst of this holy <strong> </strong>...<a href="focuson.html">Read More</a></p>
+                <h2><span class="qa">Time to Step-Up Our Game!</span></h2>
+                <p>Welcome to  the New Year of 2015. If we still find ourselves here in the land of the living  it must be because we have more yet to accomplish for the Kingdom. What has God  told you to do that you still have on <strong> </strong>...<a href="focuson.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <br>
+    </div>
+                <h2><span class="qa">Annual Oasis Singles Valentine's</span></h2>
+                <p>The  biggest singles event of the year is our <strong>Annual Oasis Singles Valentine&rsquo;S Event</strong> coming up on<strong> Saturday, February 7th </strong>at <strong>6 pm</strong>. Our Valentine&rsquo;s events always  draw our lar&shy;gest crowds<strong> </strong>...<a href="cindygaldalruperto.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/donaldreid.jpg" alt="" width="57" height="75" /><br>
+    </div>
+                <h2>Jump Start 2014 Taxes!</h2>
+                <p style="padding-bottom:24px;">Happy New Year to you one and all and help us help you ring in the New Year with tax tips we can all use. Earlier is better when it comes to working on your taxes<strong> </strong>...<a href="jump-start-2014-taxes.html">Read More</a>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/prayer-summit-concert-of-prayer-logo.jpg" width="156" height="75" alt="Concerts of Prayer Logo"><br>
+    </div>
+                <h2>Pastors' Prayer Summit</h2>
+                <p><strong>Conerts of Prayer Greater New York</strong> presents <strong>Pastors Prayer Summit, January 19-21,  2015</strong> with <strong>Dr. Luis Palau, Dr. Bill  Hybels, Dr. Robert Stearns</strong> (Worship)...<a href="pastors-prayer-summit.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/pastorjamaalbernard.jpg" alt="" name="authorpic" width="51" height="75" id="authorpic" /><br>
+    </div>
+                <h2>Pastor Jamaal Bernard</h2>
+                <p><strong>Pastor Jamaal Ber&shy;nard</strong>, son of <strong>Rev. A.R. Bernard</strong>, <strong>Sr</strong>.; foun&shy;der of <strong>Christian  Cultu&shy;ral Center (CCC) </strong>in Brooklyn announces that he will be the  Senior Pastor of the new <strong>CCC Long Island</strong><strong> </strong>...<a href="pastor-jamaal-bernard.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/revealingthesupernaturalconference.jpg" alt="Ed Citronnelli and Natanael Abreu" name="authorpic" width="167" height="75" id="authorpic3" /><br>
+    </div>
+                <h2>Revealing The 
+              Supernatural Conference</h2>
+                <p><strong>World Healing In&shy;ter&shy;national  Mini&shy;&shy;s&shy;tries</strong> presents <strong>Re&shy;vealing the Super&shy;natural Conference</strong> with speaker <strong>Natanael</strong> <strong>Abreu</strong> and Host/ Speaker <strong>Ed</strong> <strong>Ci&shy;tro&shy;nnelli</strong>, <strong>Fri&shy;</strong><strong>day, January 23rd</strong>...<a href="revealing-the-supenatural-conference.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/jamesodavis3.jpg" alt="" name="authorpic4" width="77" height="75" id="authorpic4" /><br>
+    </div>
+                <h2>Van Nest AOG </h2>
+                <p><strong>Van Nest Assembly of God Church</strong> pre&shy;sents  special ser&shy;vice on <strong>Friday, January 9th,  8pm </strong>and <strong>Sunday, January 11th,  8:30am, 10am, 11:30am, 4pm</strong> &amp; <strong>7pm</strong> special guest speaker<strong> </strong>...<a href="van-nest-AOG.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/decreeathingpicture.jpg" alt="Clock Image " name="articlepic2" width="75" height="75" class="" id="articlepic2"><br>
+    </div>
+                <h2>Decree A Thing</h2>
+                <p><b>Kingdom Life Mi&shy;ni&shy;s&shy;tries Interna&shy;tional</b> presents <b>IPS (Inter&shy;national Prayer Summit) 48 Hours of Prayer-De&shy;cree A Thing</b>, January 16th-18th, 2015 with <b>Apostle</b><strong> </strong>...<a href="decree-a-thing.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <a href="../www.christianpost.com/default.htm" target="_blank"><img src="images/freedomthroughundergroundgospeljazz.jpg" alt="Christian Post" width="52" height="85"></a><br>
+    </div>
+                <h2>Freedom Through  Underground <br>
+                  Gospel Jazz</h2>
+                <p><strong>Bethel Gospel Taber&shy;nacle Worship</strong> <strong>&amp;</strong> <strong>Fine Arts, Hope for Ex Offenders &amp; Relume Inc. </strong>present <strong>Freedom Through Underground Gospel Jazz</strong> featuring Grammy Award Winner <strong>Mark</strong><strong> </strong>...<a href="freedom-through-underground-gospel-jazz.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img style="float:right;" src="images/20140906_114903.jpg" width="123" height="75" alt="Lauren Noon"><br>
@@ -128,64 +179,23 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <p>Lauren Noon came to New York to pursue a career in fashion. On a whim, she began making bracelets, and Lauren's friends were so impressed that they encouraged her to start .  <strong> </strong>...<a href="nyc-craft-entrepreneurship-program.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="" name="authorpic" width="50" height="75" id="authorpic2" /><br>
-    </div>
-                <h2>Which Sugar Is The Healthiest?</h2>
-                <p>What's healthier - brown or white su&shy;gar? Raw sugar or table sugar? Is honey better than sugar? I field these questions from clients on a daily basis in my private practice. This month I will share  <strong> </strong>...<a href="elizabethmadison.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/davidjeremiah.jpg" width="87" height="75" alt="David Jeremiah"><br>
-    </div>
-                <h2>A Night of Celebration in New York City  with David Jeremiah &amp; Friends</h2>
-                <p>David Jeremiah &amp; Friends, Thursday, Dec. 4th, 7:30pm (Doors open: 6:30pm) @ Beacon Theatre in New York City. Musical Guests: Mat&shy;thew West, Brooklyn Tabernacle Sin&shy;gers, Nichole  <strong> </strong>...<a href="a-night-of-celebration.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/frederickkcprice.jpg" width="70" height="75" alt="Frederick Price"><br>
-    </div>
-                <h2>Holiday Season  with CCC New York</h2>
-                <p>Sunday, December 7th, 10am with Apos&shy;tle Fre&shy;de&shy;rick K. C. Price; Sunday, December 21st, 10am, Aunt Martha's Sweet Potato Pie Christ&shy;mas Play @ AMC Theatre NY, 242 Times Square (on 42nd  <strong> </strong>...<a href="focuson.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
                   <img src="images/castingcrowns.jpg" alt="Casting Crowns" width="152" height="75"><br>
-    </div>
+  </div>
                 <h2>Casting Crowns Concert</h2>
-                <p>True North and Star 99.1 present Casting Crowns, a Grammy and Dove Award winning Contemporary Christian Rock band will be at Car&shy;ne&shy;gie Hall along with a  <strong> </strong>...<a href="castingcrowns.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <span style="height:175px; overflow:hidden; padding-top:-15px;"><img src="images/brandoncamphor.jpg" width="49" height="75" alt="Brandon Camphor"></span><br>
-    </div>
-                <h2>Christmas Concert</h2>
-                <p>Church of the Re&shy;deemer presents a Christmas Con&shy;cert, Saturday, Dec. 13th, 6pm featuring Sean Pen, Jay, Nina Leal &amp; Bran&shy;don Camphor from The Brook&shy;lyn Tabernacle. Free Ad&shy;mis&shy;sion  <strong> </strong>...<a href="christmas-concert.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <span style="margin-bottom:10px;"><img src="images/rickdellaratta.jpg" alt="Rick Dellaratta" width="99" height="75"></span><br>
-    </div>
-                <h2>Kingdom Heritage Memorial Endowment</h2>
-                <p>Robert Arnoe Hol&shy;ford I, Kingdom Heritage Memorial Endowment. Sponsored by Rick Dellaratta &amp; Jazz for Peace. Hosted by Mi&shy;chael Harley of Mi&shy;chael Harley Media. Special Guest Artist Ministry  <strong> </strong>...<a href="kingdom-heritage-memorial-endowment.html">Read More</a></p>
+                <p>True North and Star 99.1 present Casting Crowns, a Grammy and Dove Award winning Contemporary Christian Rock band will be at Car&shy;ne&shy;gie Hall along with a  <strong> </strong>...<a href="castingcrowns.html">Read More</a>                </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/dr-michael-scales-and-dr-roy-s-kirton-img1464.jpg" width="158" height="75" alt="Nyack College Alumns"><br>
-  </div>
+</div>
                 <h2>Nyack College </h2>
                 <p><strong>Dr. Michael Scales</strong>,  President of <strong>Nyack College</strong>,  presented <strong>Dr. Roy S. Kirton</strong> with the <strong>2014 Alumnus of the Year Award</strong>, for  his service to society.&nbsp; Rev. Kirton is  the  <strong> </strong>...<a href="nyackcollege.html">Read More</a></p>
+                <div id="articlepic"></div>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <br>
-  </div>
-                <h2>Justice's Men's Conference </h2>
-                <p>What is JusticeNYC? It's a men's conference featuring hundreds of men and over a dozen national organizations and churches that seek to combat sexual exploitation of women - whether that is    <strong> </strong>...<a href="justincemensconf.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <br>
-  </div>
+</div>
                 <h2>EQUIPPING&#8200;PEOPLE&#8200;IN&#8200;THE&#8200;CHURCH</h2>
                 <p>Most people attend services on a Sunday morning with a need for God to meet, with an issue to be resolved, with a dilemma or with something that they want God to fix. They hope that something  <strong> </strong>...<a href="equipping-people-in-the-church.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/vickiewinans2.jpg" alt="Vickie Winans" name="authorpic" width="70" height="72" id="authorpic6" /><br>
-</div>
-                <h2>Giving Thanks to the King </h2>
-                <p>Bethel Gospel Ta&shy;ber&shy;nacle Worship &amp; Fine Arts in conjunction with H.O.P.E. for ex-offenders, Inc. &amp; New Be&shy;ginnings Center of Hope presents Giving Thanks to the King Year-End   <strong> </strong>...<a href="givingthankstotheking.html">Read More</a></p>
               </div>
             </div>
             <div class="divider"></div>
