--- a/features.htm
+++ b/features.htm
@@ -141,8 +141,26 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   <div class="photocredits2"> </div>
                   <img src="images/jesuswashingapostlesfeet1.jpg" width="98" height="75"><br>
           </div>
-                <h2>Services to King Jesus! </h2>
-                <p>Sacrificial service is motivated by Christ's sa&shy;crifice on the cross, rather than out of a desire to earn favor with God. Our motivation for serving others is a response to the grace shown us by Jesus, not an attempt     ...<a href="services-to-king-jesus.html">Read More</a>
+                <h2>Fasting and Intercession for 2015</h2>
+                <p>About 2 years in the making of The Love Express, the Lord spoke to me, and gave clear direction concerning The Love Express. He told me it would be, and always re&shy;main a clearing house of what the Holy Spirit would     ...<a href="fasting-and-intercession.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/luispalau.jpg" alt="Luis Palau" name="authorpic3" width="62" height="75" id="authorpic3" /><br>
+          </div>
+                <h2>RE:NEW </h2>
+                <p>Imagine  what it would look like if we as individual believers fully understood our  calling. How could our lives change? How could we be used by God to impact more  people for eternity? Imagine what God could do through us in     ...<a href="reNew.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/blacklivesmatter.jpg" width="64" height="75"><br>
+          </div>
+                <h2>Black Lives Matter</h2>
+                <p>The two  largest Pentecostal denominations in the U.S. have called with one voice for  Christians worldwide have affirmed on Sunday, Dec. 14 that indeed &quot;Black  Lives Matter,&quot; and, as admonished in Scripture, to      ...<a href="black-lives-matter.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/elizabethmadison.jpg" alt="" name="authorpic" width="50" height="72" id="authorpic7" /><br>
+        </div>
+                <h2>How to Pick the Right 'Diet'</h2>
+                <p>It&rsquo;s the  New Year, and you may be super motivated to lose weight. You have undoubtedly  been bombar&shy;ded with advertisements for the latest diets - you know, the ones  that promise to help you lose 10 pounds in a    ...<a href="elizabethmadison.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/clockimage.jpg" alt="Clock Image " width="150" height="75"><br>
@@ -158,21 +176,11 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="60" height="75" id="authorpic" /><br>
           </div>
                 <h2>Preparing for the Return of Christ </h2>
-                <p>If we knew  that a thief would be coming to break into our home, we would develop the  discipline to lock all the doors and windows (especially when we&rsquo;re not sure of  the exact day). Similarly, we need to prepare      ...<a href="jimbiscardi.html">Read More</a><div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/skerrit.jpg" width="120" height="75" alt="Skerrit Bwoy"><br>
-          </div>
-                <h2>Gospel Lighthouse </h2>
-                <p><strong>Agape Worship Cen&shy;ter</strong> <strong>Friday, Dec. 12th, </strong><strong>7pm</strong>, <strong>Sold Out Youth</strong> <strong>Christmas</strong> <strong>Party</strong>; <strong>Sunday, Dec. 14th, 10am</strong>, <strong>Christmas Cantata</strong> &ldquo;A Christmas to Be&shy;lieve  In&rdquo;;&nbsp; <strong>Wednesday, Dec. 17th</strong>     ...<a href="gospel-lighthouse.html">Read More</a><div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/pastoranthonyventola.jpg" width="47" height="75" alt="Pastor Anthony Ventola"><br>
-          </div>
-                <h2>Holiday Celebration </h2>
-                <p>Hundreds  of NYC-area nonprofit and church leaders &mdash; young and old, red and yellow, black and white&mdash;are mobilizing as one body for  the very first time in an effort to be the hands and feet of Jesus     ...<a href="holiday-celebration.html">Read More</a></p>
-<div id="articlepic">
+                <p>If we knew  that a thief would be coming to break into our home, we would develop the  discipline to lock all the doors and windows (especially when we&rsquo;re not sure of  the exact day). Similarly, we need to prepare      ...<a href="jimbiscardi.html">Read More</a>
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/jack-redmond.jpg" alt="" name="authorpic" width="76" height="75" id="authorpic4" /><br>
-          </div>
+        </div>
                 <h2>Build Your Legacy Now</h2>
                 <p>Building  legacy is a pro&shy;cess. If you want your life to make a difference now and for  generations to come, the more you build now, the more people you will impact for decades to come!    ...<a href="buildyourlegacy.html">Read More</a></p>
                 <div id="articlepic">
@@ -181,12 +189,6 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
       </div>
                 <h2>American Bible Society </h2>
                 <p>The <strong>American Bible Society's</strong>' stated  mission is to engage people &quot;with the life-changing message of God's  Word,&quot; and the 200-year-old Christian nonprofit appears to be pulling out  all the   ...<a href="ads/americanbiblesociety.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="" name="authorpic" width="50" height="72" id="authorpic7" /><br>
-        </div>
-                <h2>Sugar Substitutes - Part One</h2>
-                <p>The media  and the internet are full of confusing and often contradictory information  about sugar substitutes, like Equal, Splenda and Stevia. Since God desires us  to be educated, as stated in Proverbs 18:15   ...<a href="elizabethmadison.html">Read More</a></p>
                 <p>&nbsp;</p>
 </div>
             </div>
