--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -97,32 +97,24 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
   <div id="authorname">
     
       <!--SECTION LEFT END--></div>
-  <p align="center"><strong><a name="a1"></a><span class="qa">Christmas  Services</span></strong></p>
-  <p><strong>Christian Cultural Center </strong>pre&shy;sents  a weekend of <strong>Christ&shy;mas Services</strong>; A  Musical Pre&shy;sen&shy;ta&shy;tion of <strong>Angels We  Have Heard on High; Saturday, Dec. 20th, 5pm</strong> &amp; <strong>Sunday Dec. 21st, 8am</strong> &amp; <strong>11:30am</strong>; Free Admission @ 12020 Flatlands Avenue, Brook&shy;lyn, NY. Call  (718) 306-1000 or visit www.cccinfo.org. </p>
+  <p align="center" class="qa"><strong><a name="a1"></a>Upper  Room</strong></p>
+  <p><strong>Upper Room Theatre Mi&shy;ni&shy;stry; Pastor and  Overseer Bi&shy;shop William G. Bennett Au&shy;ditions for Easter Play 2015 &ldquo;The Ten  Com&shy;mand&shy;ments&rdquo;</strong> Date: <strong>January  10, 2015</strong> @ <strong>1pm-4pm</strong>; Location:  180 Van Buren Street, Brook&shy;lyn, NY 11221. For additional information please  call Playwright Leslie Green @ 347-737-2392. </p>
+  
+  <p align="center" class="qa"><strong><a name="a2"></a>ABLAZE</strong></p>
+  <p><strong>R.A.W. Int&rsquo;l Mini&shy;stries</strong> presents <strong>RAW 2K15 Ablaze with Pentecostal Fire,  February 12th-15th</strong> with <strong>Bishop  Mi&shy;chael </strong><strong>Blue, Apostle Herman  Mur&shy;ray, Rev. Jackie McCullough, Bishop Neil C. Ellis, Mother May Dupree, Apostle Mat&shy;thew Stevenson,  Pastor Jonathan Shaw</strong> and conference host <strong>Dr. Aretha Wilson</strong> @ <strong>The Em&shy;bas&shy;sy  Conference Center</strong>, 188 Vincent Avenue, Lynbrook, NY 11563. For further  information call (516)825-9043 or visit www. rawinternationalministries.org</p>
   
   
-  <p align="center"><strong><a name="a2"></a><span class="qa">Christmas in the City</span></strong></p>
-  <p><strong>The Brooklyn Tabernacle </strong>pre&shy;sents  a musical spectacular for the entire family,<strong> Christmas</strong> <strong>in the</strong> <strong>City, Sunday</strong>, <strong>Dec. 14th, 3pm</strong>; <strong>Tuesday</strong>, <strong>Dec</strong>. <strong>16th, 7:30pm</strong>; <strong>Friday</strong>, <strong>Dec. 19th, 7:30pm</strong> &amp; <strong>Sunday</strong>, <strong>Dec. 21st, 3pm</strong> &amp; <strong>6pm. All Seats Free @ The Brooklyn Tabernacle</strong>, 17 Smith Street,  Brooklyn, NY 11201. Call (718) 290-2000.</p>
+  <p align="center" class="qa"><strong><a name="a3"></a>Prophetic Deliverance</strong></p>
+  <p><strong>Pauline Walley Evangelistic Ministries 10th  School of Pro&shy;phetic Deliverance World Con&shy;vention 2015, January 15th-17th</strong> @ <strong>Robert Treat Hotel</strong>, 50 Park Place,  Newark, New Jersey 07102. Theme: Open the  Floodgates of Heaven: Warfare and Deliverance Strategies. <strong>Dr. Pauline Walley</strong><strong>-Daniels</strong> and <strong>Pastor Frede&shy;rick R. Daniels</strong>. To  register or for more information call (718) 652-2916 or visit us at www.pauline  walley.org<strong><br clear="all">
+  </strong>  </p>
+  <p align="center" class="qa"><strong><a name="a4"></a>Winter White...</strong></p>
+  <p><strong>Triumphant Full Gospel As&shy;sembly, Inc</strong>.  presents <strong>Winter White Fundraiser Brunch,  Saturday, January 17th, 10am</strong> with <strong>Prophetess Denise Baize </strong>@ <strong>Glen  Terrace Caterers, </strong>5313 Avenue N, Brooklyn, New York 11234. Donation: $75.  Hosted by <strong>Bishop Melvin E. Bayne &amp;  Apostle Dr. Lilia A. Bayne</strong>. White Attire. For further information please  call us at (718) 774-4696. </p>
   
+  <p align="center" class="qa"><strong><a name="a5"></a>Passion 4 Worship</strong></p>
+  <p><strong>Bethel Gospel Tabernacle </strong>presents <strong>Igniting Passion 4 Worship Summit, (2nd  Annual Worship &amp; Fine Arts Ex&shy;pe&shy;ri&shy;ence) April 23-26, 2015</strong> with<strong> Dr. Lamar Boschman, J. Da&shy;vid Bratton,  Rev. Dana Po&shy;well, Dr. Bob Sorge, Dr. Mi&shy;chael Torres</strong> and <strong>Bishop Ro&shy;derick Caesar &amp; Pastor Be&shy;verly  Caesar</strong>, Summit Hosts. Venue: 110-25 Guy R. Brewer Blvd., Jamaica, NY 11434.  To register or for more information please call us at (718)291-2677 or visit us  at www.bgtfi.us.</p>
   
-  <p align="center"><strong><a name="a3"></a><span class="qa">Holiday Celebration</span></strong></p>
-  <p><strong>New Greater Bethel Mi&shy;nistries</strong> <strong>Holiday Celebration  Christ&shy;mas Eve, Wed, Dec. 24th</strong> @ <strong>Mid&shy;night</strong>; <strong>New Year&rsquo;s Eve.  Wed, Dec. 31st </strong>@ <strong>10pm</strong>.  @ 215-32 Ja&shy;maica Ave.,Queens Vil&shy;lage,  NY. <strong>Pastor  Dr. John H. Boyd II</strong> &amp; <strong>First Lady  Va&shy;lerie Boyd</strong>. Call 718-740-4357; www.ngbm.org </p>
-  
-  
-  <p align="center"><strong><a name="a4"></a><span class="qa">Dabar Bethlehem </span></strong><span class="qa"><strong>Cathedral</strong></span></p>
-  <p><strong>Birthday Celebration</strong> &amp;<strong> Ap&shy;preciation Day, Sun, Dec. 14th</strong> for <strong>Bishop H. Curtis Dou&shy;glas; The Music  of Christmas Can&shy;tata, Fri, Dec. 19th, 8pm; Christmas Day Service, Thurs, Dec. 25th, 10am &amp; New  Year&rsquo;s Eve Service, Wed, Dec. 31st, 10pm</strong> @ 218-38 98th  Avenue, Queens Village, NY. Call (718) 468-7595;  www.dbcathedral.org</p>
-  
-  
-  <p align="center"><strong><a name="a5"></a><span class="qa">Benefit Concert</span></strong></p>
-  <p><strong>Bethel Gospel Tab. Worship  &amp; </strong><strong>Fine Arts</strong> in  conjunction with <strong>H.O.P.E. for  Ex-Offenders, Inc</strong>. &amp; <strong>New  Be&shy;ginnings Ctr. </strong><strong>of Hope </strong>pre&shy;sents <strong>Giving Thanks to the King Benefit Con&shy;cert,  Sat, Dec. 6th </strong>@ <strong>5:30pm</strong> with <strong>Vickie Wi&shy;nans, DaveTVnHD</strong> along  with <strong>One Voice</strong> &amp; <strong>Divine Praise of BGT. </strong>General Ad&shy;mis&shy;sion:$30  @ 110-25 Guy R. Bre&shy;wer Blvd., Jamaica, NY 11434. <strong>Dr. Ro&shy;de&shy;rick R. Caesar</strong>, Se&shy;nior Pastor. For more information call 718-291-2677; www.bgtfi.us</p>
-  
-  
-  <p align="center" class="qa"><strong>Gospel Christmas</strong></p>
-  <p><span class="qa"><strong></strong></span><strong>Unbroken Chain Gospel Christmas Celebration, Fri&shy;day, December 19th, 7:30pm (Free Gospel Concert)</strong> In&shy;ter&shy;na&shy;tional, World-Renowned Unbro&shy;ken Chain Music  Ministry @ <strong>Ba&shy;ruch Performing Arts  Center, Baruch College</strong>, East 25th Street (between Lexington  &amp; 3rd Ave&shy;nues), NY, NY. For more information call (718)  372-9897 www.unbrokenchain.org</p>
-  
-  
-  <p align="center" class="qa"><strong>Watch Night Service</strong></p>
-  <p><span class="qa"><strong></strong></span><strong>Perfecting Faith Church</strong> presents <strong>Watch  Night Service, Wednesday, December 31st, 10pm</strong> @ 311 North Main Street,  Freeport,NY 11520 with <strong>Senior Pastor  Donald A. McClurkin Jr.</strong> For further information call (516) 223-8300 or you  can visit us at: www.perfectingfaith.org </p>
+  <p align="center" class="qa"><strong>Monk&rsquo;s Memorial</strong></p>
+  <p><strong>Women&rsquo;s Department</strong> invites  you to celebrate their <strong>Annual Women&rsquo;s  Day, Sunday, Jan&shy;uary 18th, 2015 </strong>&nbsp;@ <strong>Monk&rsquo;s  Me&shy;morial Church</strong>, Fulton Street, Brooklyn, NY. <strong>Overseer C. Williams. </strong>For additional information call (516)  429-5475.</p>
 </div><!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
